--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "msgpack-d"]
 	path = msgpack-d
-	url = https://github.com/msgpack/msgpack-d.git
+	url = git@github.com:msgpack/msgpack-d.git
